Remove 32 bit support
Compilation fails / throws warnings because some of our dependencies
don't support 32 bit. This also speeds up build.

Tensorflow and PyTorch don't work on 32 bit. I think it's fairly safe
to say we don't need to support it for now, maybe we can add back in
future if we do.

Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/go/Makefile
+++ b/go/Makefile
@@ -2,8 +2,8 @@ SHELL := /bin/bash
 
 VERSION := 0.1.44
 ENVIRONMENT := development
-PLATFORMS := darwin linux windows
-ARCHITECTURES := 386 amd64
+PLATFORMS := darwin linux
+ARCHITECTURES := amd64
 GOOS := $(shell go env GOOS)
 GOARCH := $(shell go env GOARCH)
 MAIN := cmd/replicate/main.go
