--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/loader": "^1.6.19",
     "@next/mdx": "^10.0.0",
     "@reach/tabs": "^0.11.2",
+    "copy-text-to-clipboard": "^2.2.0",
     "next": "10.0.0",
     "prettier": "^2.1.2",
     "prism-react-renderer": "^1.1.1",
