Add 'sudo' to resolve permission error on Linux
Signed-off-by: Ronit Jorvekar  <pictronit007@gmail.com>

--- a/go/Makefile
+++ b/go/Makefile
@@ -51,7 +51,7 @@ build-all:
 
 .PHONY: install
 install: build
-	cp $(BINARY) $(INSTALL_PATH)
+	sudo cp $(BINARY) $(INSTALL_PATH)
 
 .PHONY: clean
 clean:
