WIP: python/go grpc interface for async uploads
Signed-off-by: Andreas Jansson <andreas@replicate.ai>

--- a/go/Makefile
+++ b/go/Makefile
@@ -95,8 +95,8 @@ lint:
 	go run github.com/golangci/golangci-lint/cmd/golangci-lint run ./...
 
 .PHONY: fmt
-fmt: install-goimports
-	goimports --local replicate.ai -w -d .
+fmt:
+	go run golang.org/x/tools/cmd/goimports --local replicate.ai -w -d .
 
 .PHONY: mod-tidy
 mod-tidy:
