save on_epoch_end if no validation; consistent api; tests
Signed-off-by: Andreas Jansson <andreas@replicate.ai>

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,6 +2,9 @@ mypy==0.790
 black==19.10b0
 pytest==6.1.1
 tensorflow-cpu==2.4.0
+pytorch-lightning==1.1.1
+torch==1.4.0
+torchvision==0.5.0
 # for integration tests
 boto3==1.12.32
 google-cloud-storage==1.32.0
