Setup and use a virtual env for Python in makefiles
Signed-off-by: hemildesai <hemil.desai10@gmail.com>

--- a/end-to-end-test/Makefile
+++ b/end-to-end-test/Makefile
@@ -1,7 +1,10 @@
+ROOTDIR=../
+VENV=$(ROOTDIR)venv/bin/
+
 .PHONY: test
 test:
-	pytest -m "not external"
+	$(VENV)pytest -m "not external"
 
 .PHONY: test-external
 test-external:
-	pytest
+	$(VENV)pytest
