--- a/python/Makefile
+++ b/python/Makefile
@@ -45,6 +45,7 @@ build: clean
 	pip install wheel
 	python setup.py bdist_wheel --plat-name manylinux1_x86_64
 	python setup.py bdist_wheel --plat-name macosx_10_9_x86_64
+	python setup.py bdist_wheel --plat-name win_amd64
 
 .PHONY: targets
 targets:
