--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/free-pro-team@latest/actions/reference/specifications-for-github-hosted-runners#supported-runners-and-hardware-resources
-        platform: [ubuntu-20.04, macos-10.15]
+        platform: [ubuntu-20.04, macos-10.15, windows-2019]
     runs-on: ${{ matrix.platform }}
     defaults:
       run:
@@ -72,7 +72,7 @@ jobs:
       matrix:
         python: [3.6, 3.7, 3.8]
         # https://docs.github.com/en/free-pro-team@latest/actions/reference/specifications-for-github-hosted-runners#supported-runners-and-hardware-resources
-        platform: [ubuntu-20.04, macos-10.15]
+        platform: [ubuntu-20.04, macos-10.15, windows-2019]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@master
@@ -124,7 +124,7 @@ jobs:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/free-pro-team@latest/actions/reference/specifications-for-github-hosted-runners#supported-runners-and-hardware-resources
-        platform: [ubuntu-20.04, macos-10.15]
+        platform: [ubuntu-20.04, macos-10.15, windows-2019]
     runs-on: ${{ matrix.platform }}
     defaults:
       run:
