--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -107,6 +107,8 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+      - name: Upgrade pip
+        run: pip install --upgrade pip
       - name: Install
         run: |
           (cd ../ && make install-test-dependencies)
@@ -171,6 +173,8 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/private_key.pem
           chmod 400 /tmp/private_key.pem
+      - name: Upgrade pip
+        run: pip install --upgrade pip
       - name: Install
         run: |
           (cd ../ && make install-test-dependencies)
