backwards-compatible gitignore
Signed-off-by: Andreas Jansson <andreas@replicate.ai>

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ python/keepsake/bin
 # scratch notebooks
 Untitled.ipynb
 .ipynb_checkpoints
+
+# backwards-compatibility before PR505
+.replicate
+python/replicate/bin
