--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    directory: "/go"
-    schedule:
-      interval: "daily"
+#  - package-ecosystem: "gomod"
+#    directory: "/go"
+#    schedule:
+#      interval: "daily"
